# phys-electric

./: CMakeLists.txt  README.md  pcclient.py  pico_prj.cpp
ethernet/: CMakeLists.txt  ethernet.cpp  ethernet.hpp
framing/: CMakeLists.txt  framing.cpp  framing.h
manchester_codec/: CMakeLists.txt  manchester.cpp  manchester.hpp  receiver.cpp  receiver.h  sender.cpp  sender.h
pico_prj/: CMakeLists.txt  pico_prj.cpp
